files/scss/forms-selectors.scss
/* Selectors
-------------------------- */

select,
textarea,
.fake-upload-cover,
input[type="tel"],
input[type="text"],
input[type="email"],
input[type="number"],
input[type="password"] {
    @extend %project--selectors!optional;
}

.cssc-form label {
    & {
        @extend %project--label;
    }

    &:first-child {
        display: block;
        margin-bottom: 0.5em;
    }
}

.cssc-form .box {
    & {
        @extend %project--fieldgroup;
    }

    %project--selectors {
        @extend %project--field;
    }

    %project--selectors:hover {
        border-color: #999;
    }

    %project--selectors:focus {
        border-color: #000;
    }

    &[data-has-error="1"] %project--selectors {
        border-color: $color-red;
    }

    .error-msg-input,
    [data-error-invalid] {
        margin-top: 4px;
        font-size: 12px;
        color: $color-red;
    }

    textarea {
        min-height: 5em;
    }

    select {
        @extend %project--select;
    }
}

@media ($mobile_only) {
    .cssc-form .twoboxes .box {
        margin-bottom: $fieldset-margin;
    }

    .cssc-form .box.box--submit {
        text-align: center;
    }
}

.cssc-form fieldset {
    min-width: 0;
}

